--- a/Desktop/Website/style.css
+++ b/Desktop/Website/style.css
@@ -14,4 +14,53 @@ header .banner {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 20px;
+}
+.logo img {
+    width: 130x;
+    height: 20px;
+}
+.search-bar {
+    width: 100%;
+    height: 70px;
+    display: flex;
+    background-color: #ed017f;
+    align-items: center;
+    justify-content: center;
+}
+.search-bar img {
+    width: 120px;
+    height: 40px;
+}
+.search-bar .user-options {
+    width: 30%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #f6f6f6;
+}
+.store {
+    width: 30%;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.search-text img {
+    width: 60%;
+    height: 30px;
+}
+.search-text {
+    width: 70%;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-self: center;
+}
+.search-text .submit {
+    width: 70px
+    height: 30px;
+    background-color: #f6f6f6;
+    padding-left: 10px;
 }
